# Tarea2-Mege-Lantadilla

./: Tarea2-Mege-Lantadilla.ipynb  pasos:  pyproject.toml
src/tarea2_mege_lantadilla/: __init__.py
