[project]
name = "tarea2-mege-lantadilla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "catamege", email = "catamegecastro@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
